@@ -1,11 +1,11 @@
-"""SCons.Tool.Packaging.tarbz2
+"""SCons.Tool.Packaging.src_tarxz
 
-The tarbz2 packager.
+The tarxz SRC packager.
 """
 
 #
 # __COPYRIGHT__
-# 
+#
 # Permission is hereby granted, free of charge, to any person obtaining
 # a copy of this software and associated documentation files (the
 # "Software"), to deal in the Software without restriction, including
@@ -28,14 +28,13 @@ The tarbz2 packager.
 
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
-from SCons.Tool.packaging import stripinstallbuilder, putintopackageroot
+from SCons.Tool.packaging import putintopackageroot
 
 def package(env, target, source, PACKAGEROOT, **kw):
     bld = env['BUILDERS']['Tar']
-    bld.set_suffix('.tar.bz2')
-    target, source = putintopackageroot(target, source, env, PACKAGEROOT)
-    target, source = stripinstallbuilder(target, source, env)
-    return bld(env, target, source, TARFLAGS='-jc')
+    bld.set_suffix('.tar.xz')
+    target, source = putintopackageroot(target, source, env, PACKAGEROOT, honor_install_location=0)
+    return bld(env, target, source, TARFLAGS='-Jc')
 
 # Local Variables:
 # tab-width:4
